syntax = "proto3";

package selectionpb;

service Selection {
    rpc CreateSelection(CreateSelectionRequest) returns (CreateSelectionReply) {}
    rpc ParseSelection(ParseSelectionRequest) returns (ParseSelectionReply) {}
}

message CreateSelectionRequest {
    string appId = 1;
    string instanceId = 2;
    string userId = 3;
    string serverId = 4;
    int32 batchSize = 5;
    SortMethod sortMethod = 6;
    repeated Option options = 7;
}

enum SortMethod {
    NONE = 0;
    RANDOM = 1;
    ALPHABETICAL = 2;
}

message Option {
    string optionId = 1;
    string content = 2;
    map<string, string> metadata = 3;
}

message Batch {
    int32 start = 1;
    int32 end = 2;
    map<int32, Option> options = 3;
}

message CreateSelectionReply {
    repeated Batch batches = 1;
}

message ParseSelectionRequest {
    string appId = 1;
    string instanceId = 2;
    string userId = 3;
    string serverId = 4;
    string content = 5;
}

message RankedOption {
    int32 rank = 1;
    Option option = 2;
}

message ParseSelectionReply {
    repeated RankedOption rankedOptions = 1;
}